--- a/GhasreMobile/GhasreMobile.csproj
+++ b/GhasreMobile/GhasreMobile.csproj
@@ -38,6 +38,7 @@
 
   <ItemGroup>
     <None Include="compilerconfig.json" />
+    <None Include="Views\Shared\Components\Pager\Paging.cshtml" />
     <None Include="wwwroot\AdminStaticFile\Bootstrap\css\bootstrap-grid.css.map" />
     <None Include="wwwroot\AdminStaticFile\Bootstrap\css\bootstrap-grid.min.css.map" />
     <None Include="wwwroot\AdminStaticFile\Bootstrap\css\bootstrap-reboot.css.map" />
