--- a/GhasreMobile/appsettings.json
+++ b/GhasreMobile/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "googleReCaptcha:SiteKey": "6LeDbjoaAAAAAJUi6gxD3jP-AGx8K_O3lu4BadXp",
+  "googleReCaptcha:SecretKey": "6LeDbjoaAAAAABbZ51nJAOL_5gGSy95tbOvt0jx4"
 }
