--- a/GhasreMobile/GhasreMobile.csproj
+++ b/GhasreMobile/GhasreMobile.csproj
@@ -37,6 +37,7 @@
     <Folder Include="Areas\User\Data\" />
     <Folder Include="Areas\User\Models\" />
     <Folder Include="wwwroot\dy\" />
+    <Folder Include="wwwroot\Images\ckeditorimage\" />
     <Folder Include="wwwroot\lib\" />
     <Folder Include="wwwroot\st\r\ads\" />
   </ItemGroup>
