--- a/GhasreMobile/GhasreMobile.csproj
+++ b/GhasreMobile/GhasreMobile.csproj
@@ -38,7 +38,8 @@
     <Folder Include="Areas\User\Data\" />
     <Folder Include="Areas\User\Models\" />
     <Folder Include="wwwroot\dy\" />
-    <Folder Include="wwwroot\Images\ckeditorimage\" />
+    <Folder Include="wwwroot\Images\ProductAlbum\" />
+    <Folder Include="wwwroot\Images\ProductMain\" />
     <Folder Include="wwwroot\lib\" />
   </ItemGroup>
 
