--- a/GhasreMobile/GhasreMobile.csproj
+++ b/GhasreMobile/GhasreMobile.csproj
@@ -43,6 +43,7 @@
     <Folder Include="Areas\User\Models\" />
     <Folder Include="wwwroot\dy\" />
     <Folder Include="wwwroot\Images\Blogs\" />
+    <Folder Include="wwwroot\Images\Ad\" />
     <Folder Include="wwwroot\Images\Slider\" />
     <Folder Include="wwwroot\Images\User\" />
     <Folder Include="wwwroot\Images\ProductAlbum\" />
