--- a/GhasreMobile/GhasreMobile.csproj
+++ b/GhasreMobile/GhasreMobile.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Folder Include="Areas\User\Data\" />
     <Folder Include="Areas\User\Models\" />
+    <Folder Include="Views\Home\NewFolder\" />
     <Folder Include="wwwroot\dy\" />
     <Folder Include="wwwroot\Images\Blogs\" />
     <Folder Include="wwwroot\Images\Ad\" />
