--- a/GhasreMobile/wwwroot/manifest.json
+++ b/GhasreMobile/wwwroot/manifest.json
@@ -11,42 +11,42 @@
   "scope": "/",
   "icons": [
     {
-      "src": "/st/png/Mobile/icon_72.png",
+      "src": "/st/m/icon_72.png",
       "type": "image/png",
       "sizes": "72x72"
     },
     {
-      "src": "/st/png/Mobile/icon_96.png",
+      "src": "/st/m/icon_96.png",
       "type": "image/png",
       "sizes": "96x96"
     },
     {
-      "src": "/st/png/Mobile/icon_128.png",
+      "src": "/st/m/icon_128.png",
       "type": "image/png",
       "sizes": "128x128"
     },
     {
-      "src": "/st/png/Mobile/icon_144.png",
+      "src": "/st/m/icon_144.png",
       "type": "image/png",
       "sizes": "144x144"
     },
     {
-      "src": "/st/png/Mobile/icon_152.png",
+      "src": "/st/m/icon_152.png",
       "type": "image/png",
       "sizes": "152x152"
     },
     {
-      "src": "/st/png/Mobile/icon_192.png",
+      "src": "/st/m/icon_192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/st/png/Mobile/icon_384.png",
+      "src": "/st/m/icon_384.png",
       "type": "image/png",
       "sizes": "384x384"
     },
     {
-      "src": "/st/png/Mobile/icon_512.png",
+      "src": "/st/m/icon_512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
