delete all image

--- a/GhasreMobile/GhasreMobile.csproj
+++ b/GhasreMobile/GhasreMobile.csproj
@@ -44,8 +44,11 @@
     <Folder Include="Areas\User\Data\" />
     <Folder Include="Areas\User\Models\" />
     <Folder Include="wwwroot\dy\" />
+    <Folder Include="wwwroot\Images\Ad\" />
     <Folder Include="wwwroot\Images\Blogs\" />
+    <Folder Include="wwwroot\Images\ProductMain\" />
     <Folder Include="wwwroot\Images\Slider\" />
+    <Folder Include="wwwroot\Images\Store\" />
     <Folder Include="wwwroot\Images\User\" />
     <Folder Include="wwwroot\Images\ProductAlbum\" />
     <Folder Include="wwwroot\lib\" />
