--- a/GhasreMobile/GhasreMobile.csproj
+++ b/GhasreMobile/GhasreMobile.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <PackageReference Include="GoogleReCaptcha.V3" Version="1.3.0" />
+    <PackageReference Include="MD.BootstrapPersianDateTimePicker" Version="2.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.10" />
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
