--- a/GhasreMobile/compilerconfig.json
+++ b/GhasreMobile/compilerconfig.json
@@ -38,5 +38,9 @@
   {
     "outputFile": "wwwroot/css/pages/affiliate.css",
     "inputFile": "wwwroot/css/pages/affiliate.scss"
+  },
+  {
+    "outputFile": "wwwroot/css/NewIndex.css",
+    "inputFile": "wwwroot/css/NewIndex.scss"
   }
 ]
